--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Only for basic -->
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <!-- <h1>Hello World!</h1> -->
     </div>
 
-    <script src="index.js" />
+    <script src="index.js" type="module" />
 </body>
 
 </html>
